# cardamon

./: .env-example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  cardamon.example.toml  cardamon.toml  cardamon.unix.toml  cardamon.win.toml  cardamon_old.toml  diesel.toml  example-cardamon.toml  file.txt  flake.nix  rand-api  scenario.sh  telegraf.conf
.github/workflows/: build.yml  release-dist.yml  release.yml
.sqlx/: query-00a00dcf81bf1f902cdacf53d26397ed7b14ead597995d838f34cafc428f0252.json  query-0421a8d432383d159a96b63ea60a7d93c7396903de8958de82642e60d773c2c9.json  query-056a637e030964895229fd812464c7b667da0ca100a931334a7fec512efa2908.json  query-0713cd9d4ac55c2d2dc7a70b26bb4959693570a693bc50f2bfcebeeabd9f3aea.json  query-084c7814f1b0d996b64efcd021647698ecc4f49c885a7052d803d632621ec54a.json  query-0a3f2e2ed288a25e4332f3c77954abf808fa4ba4f9ae57e99a24dc3f2a0266c2.json  query-0c3234b455fecce4043039fbd60661d2994b6ef5ea71cf724a3ee798d0e4bea5.json  query-0ff32d616e5cb59aa45a3611c8ff163bdf7f9d885745e83e3d2ef34a87b5e0b9.json  query-1dac9501add785735b313c93debb4a64ebdc53cd178f2c9e3580c50eba51b723.json  query-24471a7568cbec539c7c3833813bbac51136570f1b33f7985a137a9e9f9f4e10.json  query-379000d6bd28ac53645c8d9f93d84f15de456730532d0cfcb65c41a4696d6c17.json  query-43657fb055406f159379acde2f85b8ce070a6209a206082225c3f49e61e6f82d.json  query-4b959bb520ac8de777a1b3dfc71edca53bda85156129e4fd329959df456f342c.json  query-4f1a315bf7cd7fe95d8ce0ae145ea9d409a0f9ab012a4ecd45f9c9bc29a20e9f.json  query-584a486215645381cf289cce5b88697f1b0d4a7a9946900cff776443d0e87062.json  query-603447ed68ef355a6d20824bb28beed24751fb7d3c3cd10501b0b832ebf17146.json  query-63b4d4f056b463c2340760fc58d62c31669a96a4eab13789d7e163fbe4247f54.json  query-737c03b01078706023b5da81cb223819490e8e51e3a2e3ed0898b7a26f9b90fd.json  query-7a5586a4a3c8b1eb63fef5fd0a7d124f4af057cefc59ac6b4281baff52b620e3.json  query-7c5026d8282e84e631028d7d255c750fb38e1b0f80a771ebe80dcc0e06422e38.json  query-7c9df42172b1a2fd8a52e74b50a7949d1706df6437de430ef8f6f354f244d18e.json  query-81a5239cc5e6db6548fd83465704c291fd9737e1ef8cb8afcf75dc9d4758d984.json  query-81edb6de493d95eeadf1c3c6ee3d120a44338f2d17ebca1059267d36351255d3.json  query-82ebedca54446b0538c0e7dda1e2252f17007780fdc8c0856c8d6e80680658bd.json  query-8abe6a03bbfb6f205de2dbf2e4a7181b40ec78b7b5f1b8d23fddb7eb36c5052c.json  query-903d4cd66b79d37aa5989356b85b80da8eeec27b7443fbcaf7c921d34a85ef7f.json  query-9901b5db26f70b6528765ac24de37b7e16d25a6670f0f2e3cbb2b420c6d6b287.json  query-9d7f356bb55d88058f75dbb1702071a380219742ca1fd8f6d645330c1f48aaf4.json  query-c0f0245d48b2259266636d347811b50b6e9b6130f2f1cc0dc322156518c7e987.json  query-c2cf71a060920a6e49a137b60e5c1cbba3ca10f2c6f9efd6d44353ffaf5daca8.json  query-c52091c41c55c2beaf6985123f7384cdb32f955aa0c43a0631893c19933fd071.json  query-cbf8fd94ec2aef87ae75f826b1c133a21f076b8b0bf207086141f30e1c634be0.json  query-cf11af3bdb1ff047d712545a787b9ff50aa115bf9a42af8f7c31b0b205722810.json  query-db729d680a66ace4952f3bbabc82b2aeaeda1f47c713841effec346a5b930325.json  query-e6e0b9526dc9aede87b07219df69909ecfbbf560583a0dbe673f496941d16b2e.json  query-e76a5d586ad3392766885481f47d6983ad529e4bb3188559536811d7ea97b6d0.json  query-eff76568e3fd0fa083d6910cdf3d714853c5f5b647d0ad5948fa9df4aa785587.json  query-f3f7173110e2ea3295f85e116e34b131210cbcd3611de1d3f05bce524c87f380.json  query-f8e595ed8eef5ff690b643890c0f04e79ca6258cae4f13e886a75d9a80c9a044.json
curl/: get-one-scenario-page.sh  get-scenarios-page.sh  get-scenarios.sh  one-scenario.sh
entities/: Cargo.toml
examples/: cardamon.example.toml
examples/docker-python/: Dockerfile  USAGE.md  cardamon.toml  docker-compose.yml  stress_client.py  stress_server.py
examples/docker-unix/: README.md  cardamon.unix.toml
examples/tod/: Dockerfile  cardamon.toml  docker-compose.yml  go.mod  go.sum  main.go
fixtures/: cardamon.missing_process.toml  cardamon.missing_scenario.toml  cardamon.multiple_iterations.toml  cardamon.multiple_scenarios.toml  cardamon.success.toml  cpu_metrics.sql  cpus.sql  iterations.sql  metrics.sql  power_curves.sql  runs.sql  scenario_iterations.sql  scenario_runs.sql
migration/: Cargo.toml
migration/src/: lib.rs  m20240822_095823_create_run_table.rs  m20240822_095830_create_metrics_table.rs  m20240822_095838_create_iteration_table.rs
migrations/: 20240428124253_run.up.sql  20240513114843_cpu_metrics.down.sql  20240513114843_cpu_metrics.up.sql  20240513114843_metrics.up.sql  20240514125448_iteration.down.sql  20240514125448_iteration.up.sql  20240514125448_scenario.down.sql  20240514125448_scenario.up.sql  20240514125448_scenario_iteration.down.sql  20240514125448_scenario_iteration.up.sql  20240628124253_run.down.sql  20240628124253_run.up.sql
migrations/2023-12-11-115825_scenario/: down.sql  up.sql
migrations/2023-12-11-120004_cpu_metrics/: down.sql  up.sql
migrations/2024-05-06-144617_add_iteration_column/: down.sql  up.sql
src/: app_runner.rs  carbon_intensity.rs  clap_args.rs  config.rs  dao.rs  data.rs  data_access.rs  database.rs  dataset.rs  example.json  execution_modes.rs  execution_plan.rs  lib.rs  main.rs  metrics.rs  metrics_logger.rs  metrics_server.rs  migrator.rs  models.rs  persistence_service.rs  process_control.rs  scenario_runner.rs  server.rs  server_main.rs  settings.rs  telegraf.rs
src/config/: run.rs
src/dao/: cpu.rs  iteration.rs  metrics.rs  pagination.rs  run.rs  scenario.rs
src/data/: cardamon.unix.toml  cardamon.win.toml  dataset.rs  dataset_builder.rs
src/data_access/: cpu_metrics.rs  iteration.rs  metrics.rs  pagination.rs  run.rs  scenario.rs  scenario_iteration.rs  scenario_run.rs
src/entities/: cpu.rs  iteration.rs  metrics.rs  mod.rs  power_curve.rs  prelude.rs  run.rs
src/execution_modes/: daemon.rs  live_monitor.rs  process_control.rs  scenario_runner.rs
src/metrics/: bare.rs  common.rs  docker.rs  start.rs  types.rs
src/metrics_logger/: bare_metal.rs  docker.rs
src/metrics_server/: dao.rs  dao_schema.rs  dto.rs  schema.rs
src/migrations/: m20240822_095823_create_run_table.rs  (+5 more)
tests/: data_access_tests.rs
(+37 files in other folders)
