[package]
name = "cardamon"
version = "0.1.0"
edition = "2021"
authors = [
    "Oliver Winks <oliver@paperplane.software>",
    "William Kimbell <will@kimbell.uk>",
]
description = "Cardamon is a tool to help development teams measure the power consumption and carbon emissions of their software."
# Filled out by @ohuu please 
#license = "MIT OR Apache-2.0"
repository = "https://github.com/Root-Branch/cardamon"
documentation = "https://docs.rs/cardamon"
homepage = "https://github.com/Root-Branch/cardamon"
keywords = [
    "carbon-emissions",
    "co2-monitoring",
    "process-monitoring",
    "environmental",
    "sustainability",
]
categories = ["Command line utilities", "Science"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "card"
path = "src/main.rs"

[[bin]]
name = "card-server"
path = "src/server_main.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["std"] }
async-trait = "0.1.80"
axum = { version = "0.7.1", features = ["json", "macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.10", features = ["derive"] }
dotenv = "0.15.0"
nanoid = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
itertools = "0.12.0"
spinners = "4.1.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"
toml = "0.8.12"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "migrate",
] }
reqwest = { version = "0.12.4", features = ["json"] }
sysinfo = "0.30.12"
bollard = "0.16.1"
futures-util = "0.3.30"
lazy_static = "1.4.0"
uuid = { version = "1.8.0", features = ["v4"] }
subprocess = "0.2.9"
tracing-log = "0.2.0"
shlex = "1.3.0"
bytes = "1.6.0"
tar = "0.4.41"
