[package]
name = "cardamon"
version = "0.0.2"
edition = "2021"
authors = [
  "Oliver Winks <oliver@paperplane.software>",
  "William Kimbell <will@kimbell.uk>",
]
description = "Cardamon is a tool to help development teams measure the power consumption and carbon emissions of their software."
license = "Polyform Shield v1.0"
repository = "https://github.com/Root-Branch/cardamon"
documentation = "https://docs.rs/cardamon"
homepage = "https://github.com/Root-Branch/cardamon"
keywords = [
  "carbon-emissions",
  "co2-monitoring",
  "process-monitoring",
  "environmental",
  "sustainability",
]
categories = ["Command line utilities", "Science"]
readme = "README.md"

[workspace]
members = [".", "entities", "migration"]

[dependencies]
entities = { version = "0.0.2", path = "entities" }
migration = { version = "0.0.2", path = "migration" }

anyhow = { version = "1.0.75", features = ["std"] }
axum = { version = "0.7.1", features = ["json", "macros"] }
bollard = "0.17.1"
bytes = "1.6.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.1.0"
dotenvy = "0.15.7"
futures-util = "0.3.30"
http = "1.1.0"
itertools = "0.13.0"
mime_guess = { version = "2.0.5" }
nanoid = "0.4.0"
num_cpus = "1.16.0"
reqwest = { version = "0.12.7", features = ["json"] }
rust-embed = "8.5.0"
sea-orm = { version = "1.0.0", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros",
  "tests-cfg",
] }
sea-orm-macros = { version = "^1.0.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.117"
shlex = "1.3.0"
subprocess = "0.2.9"
sysinfo = "0.31.2"
tar = "0.4.41"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
toml = "0.8.12"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }.{ archive-format }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
